@@ -1,0 +1,154 @@
+digraph G
+{
+ // inputs
+ thck0 [style = filled,color=greenyellow];
+ topg0 [style = filled,color=greenyellow];
+ bwat0 [style = filled,color=greenyellow];
+ bmlt0 [style = filled,color=greenyellow];
+ flwa0 [style = filled,color=greenyellow];
+ temp0 [style = filled,color=greenyellow];
+
+ // forcing
+ artm0 [color=salmon2];
+ acab0 [color=salmon2];
+ lati [style = filled,color=salmon2];
+ relx [style = filled,color=salmon2];
+
+ // outputs
+ thck2 [color=greenyellow];
+ lsrf2 [color=greenyellow];
+ usrf2 [color=greenyellow];
+ uflx1 [color=greenyellow];
+ diffu1 [color=greenyellow];
+ uvel1 [color=greenyellow];
+ vvel1 [color=greenyellow];
+ btrc1 [color=greenyellow];
+ vbas1 [color=greenyellow];
+ ubas1 [color=greenyellow];
+ vflx1 [color=greenyellow];
+ bwat1 [color=greenyellow];
+ wgrd [color=greenyellow];
+ flwa1 [color=greenyellow];
+ temp1 [color=greenyellow];
+ bmlt1 [color=greenyellow];
+ wvel [color=greenyellow];
+ 
+ //glide_initialise
+ glide_initialise [shape = box];
+ thck0->glide_initialise;
+ topg0->glide_initialise;
+ relx->glide_initialise;
+ glide_initialise->lsrf0;
+ glide_initialise->usrf0;
+
+ //timeevoltemp0
+ timeevoltemp0 [shape = box];
+ artm0->timeevoltemp0;
+ thck0->timeevoltemp0;
+ timeevoltemp0->temp0;
+ timeevoltemp0->flwa0;
+
+ //isosevol
+ isosevol [shape = box];
+ thck0->isosevol;
+ topg0->isosevol;
+ relx->isosevol;
+ isosevol->topg1;
+
+ //slipvelo
+ slipvelo [shape = box];
+ bwat0->slipvelo;
+ relx->slipvelo;
+ slipvelo->btrc0;
+ slipvelo->ubas;
+ slipvelo->vbas;
+
+ //zerovelo0
+ zerovelo0 [shape = box];
+ flwa0->zerovelo0;
+ ubas->zerovelo0;
+ vbas->zerovelo0;
+ zerovelo0->uvel0;
+ zerovelo0->vvel0;
+ zerovelo0->diffu0;
+ zerovelo0->uflx0;
+ zerovelo0->vflx0;
+
+ //glide_maskthck
+ glide_maskthck [shape = box];
+ thck0->glide_maskthck;
+ acab0->glide_maskthck;
+ glide_maskthck->mask;
+
+ //timeevoltemp1
+ timeevoltemp1 [shape = box];
+ temp0->timeevoltemp1;
+ artm0->timeevoltemp1;
+ acab0->timeevoltemp1;
+ thck0->timeevoltemp1;
+ usrf0->timeevoltemp1;
+ uvel0->timeevoltemp1;
+ vvel0->timeevoltemp1;
+ bmlt0->timeevoltemp1;
+ mask->timeevoltemp1;
+ timeevoltemp1->temp1;
+ timeevoltemp1->flwa1;
+ timeevoltemp1->wgrd;
+ timeevoltemp1->wvel;
+ timeevoltemp1->bmlt1;
+ timeevoltemp1->bwat1;
+ 
+// //timeevolthck
+// timeevolthck [shape = box];
+// uflx0->timeevolthck;
+// vflx0->timeevolthck;
+// dusrfdew->timeevolthck;
+// dusrfdns->timeevolthck;
+// acab0->timeevolthck;
+// mask->timeevolthck;
+// thck0->timeevolthck;
+// usrf0->timeevolthck;
+// lsrf0->timeevolthck;
+// timeevolthck->thck1;
+// timeevolthck->usrf1;
+
+// //stagleapthck
+// stagleapthck [shape = box];
+// uflx0->stagleapthck;
+// vflx0->stagleapthck;
+// lsrf0->stagleapthck;
+// thck0->stagleapthck;
+// stagleapthck->thck1;
+// stagleapthck->usrf1;
+
+ //nonlevolthck
+ nonlevolthck [shape = box];
+ lsrf0->nonlevolthck;
+ acab0->nonlevolthck;
+ thck0->nonlevolthck;
+ bwat1->nonlevolthck;
+ relx->nonlevolthck;
+ flwa1->nonlevolthck;
+ mask->nonlevolthck;
+ nonlevolthck->thck1;
+ nonlevolthck->usrf1;
+ nonlevolthck->ubas1;
+ nonlevolthck->vbas1;
+ nonlevolthck->btrc1;
+ nonlevolthck->vvel1;
+ nonlevolthck->uvel1;
+ nonlevolthck->diffu1;
+ nonlevolthck->uflx1;
+ nonlevolthck->vflx1;
+
+ //glide_marinlim
+ glide_marinlim [shape = box];
+ lati->glide_marinlim;
+ usrf1->glide_marinlim;
+ relx->glide_marinlim;
+ topg1->glide_marinlim;
+ thck1->glide_marinlim;
+ glide_marinlim->usrf2;
+ glide_marinlim->lsrf2;
+ glide_marinlim->thck2;
+}
