@@ -494,6 +494,7 @@ contains
     call GetValue(section,'evolution',model%options%whichevol)
     call GetValue(section,'vertical_integration',model%options%whichwvel)
     call GetValue(section,'topo_is_relaxed',model%options%whichrelaxed)
+    call GetValue(section,'hotstart',model%options%hotstart)
   end subroutine handle_options
   
   subroutine print_options(model)
@@ -546,7 +547,6 @@ contains
     character(len=*), dimension(0:1), parameter :: vertical_integration = (/ &
          'standard     ', &
          'obey upper BC' /)
-
 
     call write_log('GLIDE options')
     call write_log('-------------')
@@ -614,6 +614,9 @@ contains
     call write_log(message)
     if (model%options%whichrelaxed.eq.1) then
        call write_log('First topo time slice is relaxed')
+    end if
+    if (model%options%hotstart.eq.1) then
+       call write_log('Hotstarting model')
     end if
     call write_log('')
   end subroutine print_options
